--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 <body>
 
+    <header class="header">
+        <div class="center">
+            <h1>Hamburgers</h1>
+        </div>
+    </header>
 
-  <script src="script.js"></script>
+    <main class="main">
+
+    </main>
+
+    <footer>
+        <a href="https://github.com/jonsuh/hamburgers">Recipe on Github</a>
+    </footer>
+
+<script src="script.js"></script>
+
 </body>
 </html>
